{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 490,
  "lineage": "63961e48-43ab-5eaf-9b62-ed8449101b43",
  "resources": [
    {
      "module": "module.ecselb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:868069081965:loadbalancer/app/ecs-lb/50d532d4b508794b",
            "arn_suffix": "app/ecs-lb/50d532d4b508794b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-lb-1575928662.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:868069081965:loadbalancer/app/ecs-lb/50d532d4b508794b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09bef6f028e209ea1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-080e858a5e4409348"
              },
              {
                "subnet_id": "subnet-09e18abc375683d63"
              },
              {
                "subnet_id": "subnet-0af81f5079b5f2aeb"
              }
            ],
            "subnets": [
              "subnet-080e858a5e4409348",
              "subnet-09e18abc375683d63",
              "subnet-0af81f5079b5f2aeb"
            ],
            "vpc_id": "vpc-049e0a87d6daf704f",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.sec_group.aws_security_group.ecs_alb_sg",
            "module.sec_group.aws_security_group.ecs_ec2_sg",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.ecselb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:868069081965:listener/app/ecs-lb/50d532d4b508794b/0a30fa3244e52d77",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:868069081965:targetgroup/ecs-target-group/f84eb381227a96d8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:868069081965:listener/app/ecs-lb/50d532d4b508794b/0a30fa3244e52d77",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:868069081965:loadbalancer/app/ecs-lb/50d532d4b508794b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecselb.aws_lb.ecs_elb",
            "module.sec_group.aws_security_group.ecs_alb_sg",
            "module.sec_group.aws_security_group.ecs_ec2_sg",
            "module.subnets.aws_subnet.public",
            "module.target_group.aws_lb_target_group.ecs_tg",
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:868069081965:internet-gateway/igw-04dd9d7bb692aaf00",
            "id": "igw-04dd9d7bb692aaf00",
            "owner_id": "868069081965",
            "tags": {
              "Name": "Ecs-gw"
            },
            "tags_all": {
              "Name": "Ecs-gw"
            },
            "vpc_id": "vpc-049e0a87d6daf704f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.ngw",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ecs_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d5970557306d149",
            "association_id": "eipassoc-029bd78f1c855d6e2",
            "domain": "vpc",
            "id": "eipalloc-06d5970557306d149",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0df3926483447dffb",
            "private_dns": "ip-10-0-6-169.ap-south-1.compute.internal",
            "private_ip": "10.0.6.169",
            "public_dns": "ec2-3-7-110-86.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.110.86",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ngw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ecs_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d5970557306d149",
            "association_id": "eipassoc-029bd78f1c855d6e2",
            "connectivity_type": "public",
            "id": "nat-0fa9b26d3a7c315d1",
            "network_interface_id": "eni-0df3926483447dffb",
            "private_ip": "10.0.6.169",
            "public_ip": "3.7.110.86",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-080e858a5e4409348"
          },
          "dependencies": [
            "module.ngw.aws_eip.ecs_eip",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d4a257d2ca8e760c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fa9b26d3a7c315d1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d4a257d2ca8e760c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ngw.aws_eip.ecs_eip",
            "module.ngw.aws_nat_gateway.ecs_nat",
            "module.route_table_private.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:868069081965:route-table/rtb-06296fc1dc92df403",
            "id": "rtb-06296fc1dc92df403",
            "owner_id": "868069081965",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04dd9d7bb692aaf00",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-routes"
            },
            "tags_all": {
              "Name": "pub-routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-049e0a87d6daf704f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:868069081965:route-table/rtb-0d4a257d2ca8e760c",
            "id": "rtb-0d4a257d2ca8e760c",
            "owner_id": "868069081965",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fa9b26d3a7c315d1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-049e0a87d6daf704f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.sec_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:868069081965:security-group/sg-03f02d7af26f2bad9",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f02d7af26f2bad9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs_alb_sg",
            "name_prefix": "",
            "owner_id": "868069081965",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-049e0a87d6daf704f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.sec_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:868069081965:security-group/sg-09bef6f028e209ea1",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09bef6f028e209ea1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-03f02d7af26f2bad9"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs_ec2_sg",
            "name_prefix": "",
            "owner_id": "868069081965",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-049e0a87d6daf704f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sec_group.aws_security_group.ecs_alb_sg",
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072dcf39eb0cae51a",
            "route_table_id": "rtb-0d4a257d2ca8e760c",
            "subnet_id": "subnet-0236db1f0acd0a8ba"
          },
          "dependencies": [
            "module.route_table_private.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0effda6a722352fe2",
            "route_table_id": "rtb-0d4a257d2ca8e760c",
            "subnet_id": "subnet-01a5a4de0754fa732"
          },
          "dependencies": [
            "module.route_table_private.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057dbe4f174d82da7",
            "route_table_id": "rtb-0d4a257d2ca8e760c",
            "subnet_id": "subnet-06eb2dc30e7043b46"
          },
          "dependencies": [
            "module.route_table_private.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07eef35a571460a36",
            "route_table_id": "rtb-06296fc1dc92df403",
            "subnet_id": "subnet-080e858a5e4409348"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.route_table.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01869c06157c0be29",
            "route_table_id": "rtb-06296fc1dc92df403",
            "subnet_id": "subnet-0af81f5079b5f2aeb"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.route_table.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0916b34db0bbc2cc1",
            "route_table_id": "rtb-06296fc1dc92df403",
            "subnet_id": "subnet-09e18abc375683d63"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.route_table.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:868069081965:subnet/subnet-0236db1f0acd0a8ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0236db1f0acd0a8ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "868069081965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "vpc_id": "vpc-049e0a87d6daf704f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:868069081965:subnet/subnet-01a5a4de0754fa732",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a5a4de0754fa732",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "868069081965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-2"
            },
            "tags_all": {
              "Name": "private-2"
            },
            "vpc_id": "vpc-049e0a87d6daf704f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:868069081965:subnet/subnet-06eb2dc30e7043b46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06eb2dc30e7043b46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "868069081965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-3"
            },
            "tags_all": {
              "Name": "private-3"
            },
            "vpc_id": "vpc-049e0a87d6daf704f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:868069081965:subnet/subnet-080e858a5e4409348",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080e858a5e4409348",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "868069081965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-049e0a87d6daf704f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:868069081965:subnet/subnet-0af81f5079b5f2aeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af81f5079b5f2aeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "868069081965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-2"
            },
            "tags_all": {
              "Name": "public-2"
            },
            "vpc_id": "vpc-049e0a87d6daf704f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:868069081965:subnet/subnet-09e18abc375683d63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e18abc375683d63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "868069081965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-3"
            },
            "tags_all": {
              "Name": "public-3"
            },
            "vpc_id": "vpc-049e0a87d6daf704f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:868069081965:subnet/subnet-0816f6b272c2baa7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0816f6b272c2baa7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "868069081965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-049e0a87d6daf704f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:868069081965:subnet/subnet-0b5ab3d4fa9f91fcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5ab3d4fa9f91fcd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "868069081965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-049e0a87d6daf704f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:868069081965:subnet/subnet-0d9ad373481d52e82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9ad373481d52e82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "868069081965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-049e0a87d6daf704f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:868069081965:targetgroup/ecs-target-group/f84eb381227a96d8",
            "arn_suffix": "targetgroup/ecs-target-group/f84eb381227a96d8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:868069081965:targetgroup/ecs-target-group/f84eb381227a96d8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-049e0a87d6daf704f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.target_group",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ecs_tg_att",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:868069081965:targetgroup/ecs-target-group/f84eb381227a96d8-20231009052402558900000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:868069081965:targetgroup/ecs-target-group/f84eb381227a96d8",
            "target_id": "i-016ca7f100e6848be"
          },
          "dependencies": [
            "module.target_group.aws_lb_target_group.ecs_tg",
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:868069081965:targetgroup/ecs-target-group/f84eb381227a96d8-20231009052402714900000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:868069081965:targetgroup/ecs-target-group/f84eb381227a96d8",
            "target_id": "i-0a6cdc3e1b853b4a9"
          },
          "dependencies": [
            "module.target_group.aws_lb_target_group.ecs_tg",
            "module.vpc.aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:868069081965:vpc/vpc-049e0a87d6daf704f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00299ae35777ce7ab",
            "default_route_table_id": "rtb-014071e8b42d6745e",
            "default_security_group_id": "sg-0540534d0a153a782",
            "dhcp_options_id": "dopt-0a707696460240069",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-049e0a87d6daf704f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-014071e8b42d6745e",
            "owner_id": "868069081965",
            "tags": {
              "Name": "Ecs-Vpc"
            },
            "tags_all": {
              "Name": "Ecs-Vpc"
            }
          }
        }
      ]
    }
  ]
}